fixed align center > subscribe P

--- a/css/sections/subscribe.css
+++ b/css/sections/subscribe.css
@@ -26,6 +26,7 @@
     margin-top: 10px;
   
     color: rgba(255, 255, 255, 0.8);
+    text-align: center;
   }
 
   .subscription__form{
